@@ -21,6 +21,9 @@ urlpatterns = patterns(
     url(r'^workspace/(?P<workspace_id>\d+)/workspace_items/empty/',
         'lizard_map.views.workspace_item_empty',
         name="lizard_map_workspace_item_empty"),
+    url(r'^workspace/(?P<workspace_id>\d+)/extent/',
+        'lizard_map.views.workspace_extent',
+        name="lizard_map_workspace_extent"),
     url(r'^workspace/(?P<workspace_id>\d+)/',
         'lizard_map.views.workspace',
         name="lizard_map_workspace"),
