@@ -158,6 +158,14 @@ def workspace_item_edit(request, workspace_item_id=None, visible=None):
 
 
 @never_cache
+def workspace_extent(request, workspace_id=None):
+    """Returns extent for the workspace in json.
+    """
+    workspace = get_object_or_404(Workspace, pk=workspace_id)
+    return HttpResponse(json.dumps(workspace.extent()))
+
+
+@never_cache
 def snippet_group_graph_edit(request, snippet_group_id):
     """Edits snippet_group properties using post.
     """
